--- a/code/index.html
+++ b/code/index.html
@@ -10,32 +10,123 @@
 </head>
 <body>
 
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
+  <main>
+    <div class="container">
+      <div class="left_section">
+        <div class="cards">
 
-  000
+          <!---Front_Card--->
 
-  Cardholder Name
-  e.g. Jane Appleseed
+          <div class="front_card">
+            <img src="/images/bg-card-front.png" alt="card_front">
+            <div class="card_container">
+              <img src="/images/card-logo.svg" class="card_logo" alt="logo">
+              <h1 id="number">0000 0000 0000 0000</h1>
+              <div class="card_info">
+                <span id="name">Jane Appleseed</span>
+                <span id="date">
+                  <span id="month">00</span>
+                  /
+                  <span id="year">00</span>
+                </span>
+              </div>
+            </div>
+          </div>
 
-  Card Number
-  e.g. 1234 5678 9123 0000
+          <!---Back_Card--->
+          <div class="back_card">
+            <img src="/images/bg-card-back.png" alt="card-back">
+            <span id="cvc">000</span>
+          </div>
+        </div>
+      </div>
 
-  Exp. Date (MM/YY)
-  MM
-  YY
+      <div class="right_section">
+        <form>
 
-  CVC
-  e.g. 123
+          <!---grid_1--->
+          <div class="grid_1">
+            <label for="card_name">Cardholder Name</label>
+            <input type="text" placeholder="e.g. Jane Appleseed" id="card_name" required
+             />
+          </div>
+            <!---grid_2--->
 
-  Confirm
+            <div class="grid_2">
+              <label for="card_number">Card Number</label>
+              <input type="number" oninput="if(this.value.length > this.maxLength) this.value=this.value.slice(0,this.maxLength)"
+              minlength="16"
+              maxlength="16"
+              placeholder="e.g. 1234 5678 9123 0000" id="card_number" 
+              required 
+              />
+            </div>
 
-  <!-- Completed state start -->
+            <!---grid_3--->
+            <div class="card_information">
+              <div class="card_date">
+                <label for="card_date">Exp. Date (MM/YY)</label>
+                <div class="two_inp">
+                  <div>
+                    <!--Month-->
+                    <input 
+                    type="number"
+                    placeholder="MM"
+                    oninput="if(this.value.length > this.maxLength) this.value=this.value.slice(0,this.maxLength)"
+                    minlength="2"
+                    maxlength="2"
+                    id="card_month"
+                    required>
+                  </div>
+                  <!--Year-->
+                  <div>
+                    <input 
+                    type="number"
+                    placeholder="YY"
+                    oninput="if(this.value.length > this.maxLength) this.value=this.value.slice(0,this.maxLength)"
+                    minlength="2"
+                    maxlength="2"
+                    id="card_year"
+                    required
+                    >
+                  </div>
+                  </div>
+                </div>
 
-  Thank you!
-  We've added your card details
-  Continue
+                <!---grid_4--->
+                <div class="grid_4">
+                  <label for="card_">CVC</label>
+                  <input 
+                  type="number"
+                  oninput="if(this.value.length > this.maxLength) this.value=this.value.slice(0,this.maxLength)"
+                  placeholder="e.g. 123"
+                  minlength="3"
+                  maxlength="3"
+                  id="card_cvc"
+                  required
+                  >
+                </div>
+              </div>
+
+              <!---Confirm_Button--->
+
+              <button id="submit_btn" type="submit">Confirm</button>
+            </div>  
+        </form>
+
+        <!---Thank_you--->
+        <div class="thank hidden">
+          <img src="/images/icon-complete.svg" alt="Completed">
+          <h1>Thank you!</h1>
+          <p>We've added your card details</p>
+          <button id="continueBtn">Continue</button>
+        </div>
+      </div>
+    </div>
+  </main>
+
+
+
   
  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
