--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png"> 
-  <link rel="stylesheet" href="/code/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Interactive card details form</title>
 
 </head>
@@ -132,6 +132,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-  <script src="/code/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
